--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=E-commerce
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:YWAnQ3qCVuKSxKi8djWv9jZqKX9+Blll+2Y8yTAEq70=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=e-commerce
 DB_USERNAME=root
 DB_PASSWORD=
 
